Update css and components

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,10 +1,19 @@
-body {
+body,
+.navbar {
   background: linear-gradient(
     112.1deg,
-    rgb(32, 38, 57) 11.4%,
+    rgb(17, 20, 31) 11.4%,
     rgb(49, 59, 92) 95.2%
   );
   color: #ffffff;
+  font: 400 normal "Kaisei Decol", serif;
+}
+
+.navbar {
+  box-shadow: 0px 0px 10px 0px #000;
+  a {
+    color: #ffffff;
+  }
 }
 
 .movie-app {
@@ -13,25 +22,33 @@ body {
 
 .search-bar {
   margin: 2% auto;
-  max-width: calc(1000px - 3.5%);
+  max-width: calc(100% - 400px);
+
+  @media screen and (max-width: 768px) {
+    max-width: calc(100% - 50px);
+    margin: 5% auto;
+  }
 }
+
 .movie-list {
-  //   margin: 2% auto;
   max-width: 80%;
 
   &__item {
     display: inline-block;
     margin: 20px;
     max-width: 250px;
-    background-color: #fff;
-    color: #000;
+    color: #ffffff;
+    font-size: 16px;
     border-radius: 5px;
     text-align: center;
-    box-shadow: 10px 10px 10px #111;
-    transition: background-color 0.25s linear;
+    transition: transform 0.5s ease-in-out, box-shadow 0.3s ease-in-out;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 10px 20px;
 
     &:hover {
       cursor: pointer;
+      background-color: rgba(54, 46, 46, 0.032);
+      transform: scale(1.07);
+      animation: pulse 1s infinite alternate;
     }
 
     img {
@@ -39,5 +56,31 @@ body {
       max-width: 180px;
       padding: 20px;
     }
+
+    &:not(:hover) {
+      transition: transform 1s ease-in-out;
+    }
+  }
+}
+
+.modal-body {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  img,
+  h5 {
+    max-width: 300px;
+  }
+
+  &__img img {
+    width: 100%;
+    padding: 20px;
+  }
+
+  &__info {
+    padding: 40px;
+    text-align: center;
+    color: black;
   }
 }
